first hit at carousel

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,9 @@
 </head>
 
 <body>
-    <div class="sas-promo-one" data-render="SAS-Promo" data-widget-context="{number: 1}"></div>
-    <div class="sas-promo-one" data-render="SAS-Promo" data-widget-context="{number: '2'}"></div>
+    <div id="root">
+        <h1>Hello Workd</h1>
+    </div>
 </body>
 
 </html>
